Fix text size issue on mobile device

--- a/resources/css/smallscreen.css
+++ b/resources/css/smallscreen.css
@@ -206,7 +206,7 @@ nav {
     margin-top: 0.5em;
     margin-bottom: 1em;
     letter-spacing: 0.05em;
-    font-size: 1.5em;
+    font-size: 2em;
    
 }
 hr {
